Point PRL demo to Safe time to call PRs

--- a/apps/private-law/prl-cos/demo.yaml
+++ b/apps/private-law/prl-cos/demo.yaml
@@ -69,6 +69,7 @@ spec:
       environment:
         FEATURE_EXAMPLE: false
         DUMMY_ENV: false
+        DUMMY_PROPERTY: true
         DOCMOSIS_SERVICE_BASE_URL: https://docmosis.demo.platform.hmcts.net
         PRD_API_BASEURL: http://rd-professional-api-demo.service.core-compute-demo.internal
         IDAM_CLIENT_REDIRECT_URI: https://prl-cos-demo.service.core-compute-demo.internal/oauth2/callback
