--- a/apps/private-law/prl-dgs/demo-image-policy.yaml
+++ b/apps/private-law/prl-dgs/demo-image-policy.yaml
@@ -1,7 +1,7 @@
 apiVersion: image.toolkit.fluxcd.io/v1beta2
 kind: ImagePolicy
 metadata:
-  name: demo-prl-dgs-api
+  name: demo-prl-dgs
   annotations:
     hmcts.github.com/prod-automated: disabled
 spec:
