--- a/apps/financial-remedy/finrem-cron-one-off-task/prod/prod.yaml
+++ b/apps/financial-remedy/finrem-cron-one-off-task/prod/prod.yaml
@@ -26,7 +26,7 @@ spec:
         FEATURE_CFV_ENABLED: true
         CRON_WAIT_TIME_MINS: 1
         TASK_NAME: ManageHearingsMigrationTask
-        CRON_DRY_RUN: true
+        CRON_DRY_RUN: false
         CRON_MANAGE_HEARINGS_MIGRATION_ENABLED: false
         CRON_MANAGE_HEARINGS_MIGRATION_ROLLBACK: false
         CRON_MANAGE_HEARINGS_MIGRATION_CASE_LIST_FILENAME: "manageHearingsMigration-encrypted.csv"
