--- a/apps/sscs/sscs-tribunals-api/aat.yaml
+++ b/apps/sscs/sscs-tribunals-api/aat.yaml
@@ -58,7 +58,7 @@ spec:
         HMC_DEPLOYMENT_FILTER_ENABLED: false
         TRIBUNAL_INTERNAL_DOCUMENTS_ENABLED: true
         AMQP_RECONNECT_ON_EXCEPTION: true
-        DEFAULT_PANEL_COMPOSITION_ENABLED: true
+        DEFAULT_PANEL_COMPOSITION_ENABLED: false
         IBC_NI_POSTCODES_FEATURE: true
         HEARING_DURATION_ENABLED: true
         # HMC_DEPLOYMENT_ID: "deployment-sscs-tribunals-api-aat"
