--- a/apps/ia/ia-aip-frontend/aat.yaml
+++ b/apps/ia/ia-aip-frontend/aat.yaml
@@ -11,6 +11,6 @@ spec:
         IDAM_API_URL: "https://idam-api.aat.platform.hmcts.net"
         RESTART_PODS: "Y"
         ASK_FOR_MORE_TIME_ENABLED: true
-        BANNER_ENABLED: false
+        BANNER_ENABLED: true
         BANNER_TITLE_TEXT: 'Scheduled Maintenance'
         BANNER_MESSAGE_HTML: 'Please note, the service will be unavailable on Thursday 31st July 2025 between 8:30pm to 12:30am'
