--- a/apps/sscs/sscs-ccd-case-migration/aat.yaml
+++ b/apps/sscs/sscs-ccd-case-migration/aat.yaml
@@ -13,7 +13,7 @@ spec:
       cpuLimits: "2500m"
       memoryRequests: "1024Mi"
       memoryLimits: "4096Mi"
-      schedule: "*/15 13-14 30 07 *"
+      schedule: "15 15 01 08 *"
       environment:
         CCD_DATA_STORE_API_BASE_URL: http://ccd-data-store-api-aat.service.core-compute-aat.internal
         IDAM_S2S_URL: http://rpe-service-auth-provider-aat.service.core-compute-aat.internal
@@ -23,5 +23,5 @@ spec:
         MIGRATION_CASE_LIMIT: "1000"
         JAVA_OPTS: -Xmx4G
         ARCHIVE_OLD_DRAFTS_ENABLED: false
-        DEFAULT_PANEL_COMPOSITION_ENABLED: false
+        DEFAULT_PANEL_COMPOSITION_ENABLED: true
         ULR_USE_PRE_FETCHED_CASE_LIST: true
