Revert "point AAT to SSCSCI-1729 ticket (PR 4835) for testing"

--- a/apps/sscs/sscs-tribunals-api/aat.yaml
+++ b/apps/sscs/sscs-tribunals-api/aat.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   values:
     java:
-      image: hmctspublic.azurecr.io/sscs/tribunals-api:pr-4835-e8117b6-20250801110005 #{"$imagepolicy": "flux-system:aat-sscs-tribunals-api"}
+      image: hmctspublic.azurecr.io/sscs/tribunals-api:prod-3175414-20250731151903 #{"$imagepolicy": "flux-system:sscs-tribunals-api"}
       aadIdentityName: sscs
       environment:
         CREATE_CCD_ENDPOINT: true
