--- a/apps/sscs/sscs-tribunals-api/aat-image-policy.yaml
+++ b/apps/sscs/sscs-tribunals-api/aat-image-policy.yaml
@@ -1,12 +1,10 @@
 apiVersion: image.toolkit.fluxcd.io/v1beta1
 kind: ImagePolicy
 metadata:
-  annotations:
-    hmcts.github.com/prod-automated: disabled
   name: aat-sscs-tribunals-api
 spec:
   filterTags:
-    pattern: '^pr-4835-[a-f0-9]+-(?P<ts>[0-9]+)'
+    pattern: '^prod-[a-f0-9]+-(?P<ts>[0-9]+)'
     extract: '$ts'
   policy:
     alphabetical:
