NFDIV-4955 Add genesys config to demo

--- a/apps/nfdiv/nfdiv-frontend/demo.yaml
+++ b/apps/nfdiv/nfdiv-frontend/demo.yaml
@@ -14,6 +14,11 @@ spec:
         WEBCHAT_AVAYA_SERVICE: Divorce
         DYNATRACE_URL: https://js-cdn.dynatrace.com/jstag/17177a07246/bf24054dsx/2ab4686fc177447_complete.js
         DEMO_TA: autoscaling-test3
+        GENESYS_REFERRER_PAGE: Divorce Site
+        GENESYS_BASE_URL: https://apps.euw2.pure.cloud
+        GENESYS_ENVIRONMENT: prod-euw2
+        GENESYS_KERV_BASE_URL: https://api.hmcts.hs-cx.com/web-availability
+        USE_GENESYS: true
       autoscaling:
         enabled: true
         maxReplicas: 8
