--- a/apps/nfdiv/nfdiv-frontend/prod.yaml
+++ b/apps/nfdiv/nfdiv-frontend/prod.yaml
@@ -20,6 +20,11 @@ spec:
         IGNORE_LINKED_INVITES: ENABLED
         IDAM_TOKEN_CACHE: false
         DYNATRACE_URL: https://js-cdn.dynatrace.com/jstag/17177a07246/bf00910jpo/c370a84e84966b45_complete.js
+        GENESYS_REFERRER_PAGE: Divorce Site
+        GENESYS_BASE_URL: https://apps.euw2.pure.cloud
+        GENESYS_ENVIRONMENT: prod-euw2
+        GENESYS_KERV_BASE_URL: https://api.hmcts.hs-cx.com/web-availability
+        USE_GENESYS: false
   chart:
     spec:
       chart: ./stable/nfdiv-frontend
