Add EM/TM channel

--- a/apps/slack-help-bot/cs-slack-help-bot/cs-slack-help-bot.yaml
+++ b/apps/slack-help-bot/cs-slack-help-bot/cs-slack-help-bot.yaml
@@ -19,6 +19,7 @@ spec:
       SLACK_INTERNAL_CHANNEL_RD: C0762JB51GW
       SLACK_INTERNAL_CHANNEL_AM: C07NF7LQRNG
       SLACK_INTERNAL_CHANNEL_IDAM: CKER740PM
+      SLACK_INTERNAL_CHANNEL_EMTM: C099F4Q2PDE
       DUMMY_VAR: 0
     aadIdentityName: cs-slack-help-bot
     keyVaults:
