--- a/apps/sscs/sscs-ccd-case-migration/aat.yaml
+++ b/apps/sscs/sscs-ccd-case-migration/aat.yaml
@@ -13,14 +13,14 @@ spec:
       cpuLimits: "2500m"
       memoryRequests: "1024Mi"
       memoryLimits: "4096Mi"
-      schedule: "00 10 04 08 *"
+      schedule: "30 13 04 08 *"
       environment:
         CCD_DATA_STORE_API_BASE_URL: http://ccd-data-store-api-aat.service.core-compute-aat.internal
         IDAM_S2S_URL: http://rpe-service-auth-provider-aat.service.core-compute-aat.internal
         IDAM_API_URL: https://idam-api.aat.platform.hmcts.net
-        DUMMY_RESTART_VAR: false
+        DUMMY_RESTART_VAR: true
         MIGRATION_QUERY_SIZE: 10000
-        MIGRATION_CASE_LIMIT: "200"
+        MIGRATION_CASE_LIMIT: "100"
         JAVA_OPTS: -Xmx4G
         ARCHIVE_OLD_DRAFTS_ENABLED: false
         DEFAULT_PANEL_COMPOSITION_ENABLED: true
