--- a/apps/labs/labs-manohar-hmcts-nodejs/labs-manohar-hmcts-nodejs.yaml
+++ b/apps/labs/labs-manohar-hmcts-nodejs/labs-manohar-hmcts-nodejs.yaml
@@ -16,5 +16,5 @@ spec:
       interval: 1m
   values:
     nodejs:
-      image: hmctssandbox.azurecr.io/labs/manohar-hmcts-nodejs:latest # {"$imagepolicy": "flux-system:labs-manohar-hmcts-nodejs"}
+      image: hmctssandbox.azurecr.io/labs/manohar-hmcts-nodejs:prod-9fe3bd3-20250804153355 # {"$imagepolicy": "flux-system:labs-manohar-hmcts-nodejs"}
       disableTraefikTls: true
