--- a/apps/idam/idam-hmcts-access/aat.yaml
+++ b/apps/idam/idam-hmcts-access/aat.yaml
@@ -8,5 +8,5 @@ spec:
   values:
     nodejs:
       environment:
-        APP_URL: 'https://hmcts-access.aat.platform.hmcts.net'
+        SSO_CALLBACK_BASE_URL: 'https://hmcts-access.aat.platform.hmcts.net'
         HEALTH_IDAM_API_URL: http://idam-api
