turn off migration

--- a/apps/sscs/sscs-ccd-case-migration/aat.yaml
+++ b/apps/sscs/sscs-ccd-case-migration/aat.yaml
@@ -23,5 +23,5 @@ spec:
         MIGRATION_CASE_LIMIT: "100"
         JAVA_OPTS: -Xmx4G
         ARCHIVE_OLD_DRAFTS_ENABLED: false
-        DEFAULT_PANEL_COMPOSITION_ENABLED: true
+        DEFAULT_PANEL_COMPOSITION_ENABLED: false
         ULR_USE_PRE_FETCHED_CASE_LIST: false
