turn on ILA in prod

--- a/apps/sscs/sscs-tribunals-api/perftest.yaml
+++ b/apps/sscs/sscs-tribunals-api/perftest.yaml
@@ -37,3 +37,4 @@ spec:
         TRIBUNAL_INTERNAL_DOCUMENTS_ENABLED: true
         IBC_NI_POSTCODES_FEATURE: true
         HEARING_DURATION_ENABLED: true
+        DEFAULT_PANEL_COMPOSITION_ENABLED: true
