chart name corrected

--- a/apps/et/et-cron-wa-task-for-expired-bfactions/et-cron-wa-task-for-expired-bfactions.yaml
+++ b/apps/et/et-cron-wa-task-for-expired-bfactions/et-cron-wa-task-for-expired-bfactions.yaml
@@ -12,7 +12,7 @@ spec:
       schedule: 0/30 * * * *
   chart:
     spec:
-      chart: et-bf-cron
+      chart: et-cron
       version: 0.0.1
       sourceRef:
         kind: HelmRepository
