--- a/apps/pcq/pcq-backend/prod.yaml
+++ b/apps/pcq/pcq-backend/prod.yaml
@@ -15,5 +15,5 @@ spec:
       schedule: "17 22 * * SUN-THU"
       environment:
         PCQ_DISPOSER_ENABLED: true
-        PCQ_DISPOSER_DRY_RUN: false
+        PCQ_DISPOSER_DRY_RUN: true
         PCQ_DISPOSER_RATE_LIMIT: 10000
