--- a/apps/sscs/sscs-ccd-case-migration/sscs-ccd-case-migration.yaml
+++ b/apps/sscs/sscs-ccd-case-migration/sscs-ccd-case-migration.yaml
@@ -48,6 +48,8 @@ spec:
               alias: ADJOURNMENT_FLAG_MIGRATION_ENCODED_STRING
             - name: encoded-string-clear-pcm-migration
               alias: PANEL_MEMBER_COMPOSITION_MIGRATION_ENCODED_STRING
+            - name: encoded-string-default-panel-composition-exclude
+              alias: DEFAULT_PANEL_COMPOSITION_EXCLUDE_ENCODED_STRING
       environment:
         MIGRATION_WA_ENABLED: false
   chart:
