--- a/apps/et/et-cron-wa-task-for-expired-bfactions/demo-00.yaml
+++ b/apps/et/et-cron-wa-task-for-expired-bfactions/demo-00.yaml
@@ -6,7 +6,8 @@ spec:
   releaseName: et-cron-wa-task-for-expired-bfactions
   values:
     job:
-      suspend: true
+      suspend: false
+      schedule: "0,30 * * * *"
       disableActiveClusterCheck: false
     global:
       jobKind: CronJob
