--- a/apps/private-law/prl-citizen-frontend/prod.yaml
+++ b/apps/private-law/prl-citizen-frontend/prod.yaml
@@ -27,4 +27,4 @@ spec:
         ENABLE_RA_COMPONENT: true
         ENABLE_CASE_TRAIN_TRACK: false
         ENABLE_PCQ_COMPONENT: true
-        ALLOWED_COURTS: Swansea Civil Justice Centre,Kingston-upon-Hull Combined Court Centre,Grimsby Combined Court Centre,Chelmsford Justice Centre,Chelmsford Magistrates' Court and Family Court
+        ALLOWED_COURTS: Swansea Civil Justice Centre,Kingston-upon-Hull Combined Court Centre,Grimsby Combined Court Centre,Chelmsford Justice Centre,Chelmsford Magistrates' Court and Family Court,Wolverhampton Combined Court Centre,Wolverhampton Magistrates' Court
