--- a/apps/ia/ia-aip-frontend/aat.yaml
+++ b/apps/ia/ia-aip-frontend/aat.yaml
@@ -9,7 +9,7 @@ spec:
       environment:
         IDAM_WEB_URL: "https://idam-web-public.aat.platform.hmcts.net"
         IDAM_API_URL: "https://idam-api.aat.platform.hmcts.net"
-        RESTART_PODS: "Y"
+        RESTART_PODS: "Yes"
         ASK_FOR_MORE_TIME_ENABLED: true
         BANNER_ENABLED: false
         BANNER_TITLE_TEXT: 'Scheduled Maintenance'
