--- a/apps/civil/civil-citizen-ui/aat-image-policy.yaml
+++ b/apps/civil/civil-citizen-ui/aat-image-policy.yaml
@@ -3,7 +3,7 @@ kind: ImagePolicy
 metadata:
   name: aat-civil-citizen-ui
   annotations:
-    hmcts.github.com/prod-automated: enabled
+    hmcts.github.com/prod-automated: disabled
 spec:
   filterTags:
     pattern: '^pr-6571-[a-f0-9]+-(?P<ts>[0-9]+)'
