--- a/apps/civil/civil-citizen-ui/aat.yaml
+++ b/apps/civil/civil-citizen-ui/aat.yaml
@@ -11,7 +11,7 @@ spec:
       readinessTimeout: 5
       readinessPeriod: 15
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/civil/citizen-ui:prod-fde5621-20250806083649 #{"$imagepolicy": "flux-system:civil-citizen-ui"}
+      image: hmctspublic.azurecr.io/civil/citizen-ui:pr-6571-1ec6afa-20250801131355 #{"$imagepolicy": "flux-system:aat-civil-citizen-ui"}
       environment:
         DUMMY_RESTART_VAR: true
         CIVIL_GENERAL_APPLICATIONS_URL: http://civil-general-applications-aat.service.core-compute-aat.internal
