--- a/apps/civil/civil-service/aat.yaml
+++ b/apps/civil/civil-service/aat.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   values:
     java:
-      image: hmctspublic.azurecr.io/civil/service:prod-1926ce1-20250806080142 #{"$imagepolicy": "flux-system:civil-service"}
+      image: hmctspublic.azurecr.io/civil/service:pr-6892-f395d7a-20250806101235 #{"$imagepolicy": "flux-system:aat-civil-service"}
       keyVaults:
         civil:
           resourceGroup: civil
