Creating upgrade files for Dynatrace, applying change to preview only to test

--- a/apps/dynatrace/preview/base/kustomization.yaml
+++ b/apps/dynatrace/preview/base/kustomization.yaml
@@ -6,3 +6,5 @@ resources:
 namespace: dynatrace
 patches:
 - path: dynakube.yaml
+- path: ../../dynatrace-crds-upgrade/kustomize.yaml
+- path: ../../dynatrace-operator-upgrade.yaml
