revert to v1beta2 patch and absolute reference to files

--- a/apps/dynatrace/preview/base/kustomization.yaml
+++ b/apps/dynatrace/preview/base/kustomization.yaml
@@ -6,5 +6,5 @@ resources:
 namespace: dynatrace
 patches:
 - path: dynakube.yaml
-- path: ../../dynatrace-crds-upgrade/kustomize.yaml
-- path: ../../dynatrace-operator-upgrade.yaml
+- path: ../../../apps/dynatrace/dynatrace-crds-upgrade/kustomize.yaml
+- path: ../../../apps/dynatrace/dynatrace-operator-upgrade.yaml
