adding crds to cluster level file

--- a/clusters/preview/base/kustomization.yaml
+++ b/clusters/preview/base/kustomization.yaml
@@ -63,3 +63,4 @@ patches:
       annotationSelector: hmcts.github.com/kustomize-defaults != disabled
   - path: ../../../apps/tax-tribunals/preview/base/kustomize.yaml
   - path: ../../../apps/admin/preview/base/kustomize.yaml
+  - path: ../../../apps/dynatrace/dynatrace-crds-upgrade/kustomize.yaml
