--- a/apps/dynatrace/preview/base/dynakube.yaml
+++ b/apps/dynatrace/preview/base/dynakube.yaml
@@ -1,7 +1,7 @@
 apiVersion: dynatrace.com/v1beta2
 kind: DynaKube
 metadata:
-  name: DynaKube
+  name: dynakube
   namespace: dynatrace
 spec:
   apiUrl: https://yrk32651.live.dynatrace.com/api
