--- a/apps/et/et-cos/demo.yaml
+++ b/apps/et/et-cos/demo.yaml
@@ -6,7 +6,7 @@ spec:
   releaseName: et-cos
   values:
     java:
-      image: hmctspublic.azurecr.io/et/cos:prod-ef1ba74-20250806110815 #{"$imagepolicy": "flux-system:et-cos"}
+      image: hmctspublic.azurecr.io/et/cos:pr-2706-7e3a09d-20250806084001 #{"$imagepolicy": "flux-system:demo-et-cos"}
       environment:
         RD_PROFESSIONAL_API_URL: http://rd-professional-api-demo.service.core-compute-demo.internal
         AAC_URL: http://aac-manage-case-assignment-demo.service.core-compute-demo.internal
