--- a/apps/et/et-cron-wa-task-for-expired-bfactions/demo-image-policy.yaml
+++ b/apps/et/et-cron-wa-task-for-expired-bfactions/demo-image-policy.yaml
@@ -12,4 +12,4 @@ spec:
     alphabetical:
       order: asc
   imageRepositoryRef:
-    name: demo-et-cron-wa-task-for-expired-bfactions
+    name: et-cos
