--- a/apps/et/et-cron-wa-task-for-expired-bfactions/demo-00.yaml
+++ b/apps/et/et-cron-wa-task-for-expired-bfactions/demo-00.yaml
@@ -7,7 +7,7 @@ spec:
   values:
     job:
       image: hmctspublic.azurecr.io/et/cos:pr-2706-7e3a09d-20250806084001 #{"$imagepolicy": "flux-system:demo-et-cron-wa-task-for-expired-bfactions"}
-      suspend: true
+      suspend: false
       schedule: "0,30 * * * *"
       disableActiveClusterCheck: false
     global:
