added ithc service principle mi id

--- a/apps/reform-scan/serviceaccount/ithc.yaml
+++ b/apps/reform-scan/serviceaccount/ithc.yaml
@@ -4,4 +4,4 @@ metadata:
   name: ${NAMESPACE}
   namespace: ${NAMESPACE}
   annotations:
-    azure.workload.identity/client-id: "not-set-yet"
+    azure.workload.identity/client-id: "0597b272-ecb9-4a92-a5b8-a9200b5712fa"
