--- a/apps/private-law/prl-cos/prod.yaml
+++ b/apps/private-law/prl-cos/prod.yaml
@@ -19,7 +19,7 @@ spec:
       image: hmctspublic.azurecr.io/prl/cos:prod-bd57935-20250806130311 #{"$imagepolicy": "flux-system:prl-cos"}
       environment:
         FEATURE_EXAMPLE: true
-        DUMMY_ENV: false
+        DUMMY_ENV: true
         IDAM_API_URL: https://idam-api.platform.hmcts.net
         AUTH_IDAM_CLIENT_BASEURL: https://idam-api.platform.hmcts.net
         XUI_URL: https://manage-case.platform.hmcts.net/cases/case-details
