Add suspend option for et-cron-wa-task-for-expired-bfactions in AAT configurations
Signed-off-by: Harpreet Jhita <harpreet.jhita@justice.gov.uk>

--- a/apps/et/et-cron-wa-task-for-expired-bfactions/aat-00.yaml
+++ b/apps/et/et-cron-wa-task-for-expired-bfactions/aat-00.yaml
@@ -6,6 +6,7 @@ spec:
   releaseName: et-cron-wa-task-for-expired-bfactions
   values:
     job:
+      suspend: true
       disableActiveClusterCheck: false
     global:
       jobKind: CronJob
