--- a/apps/et/et-cron-wa-task-for-expired-bfactions/aat-01.yaml
+++ b/apps/et/et-cron-wa-task-for-expired-bfactions/aat-01.yaml
@@ -6,6 +6,7 @@ spec:
   releaseName: et-cron-wa-task-for-expired-bfactions
   values:
     job:
+      suspend: true
       disableActiveClusterCheck: false
     global:
       jobKind: CronJob
