--- a/apps/idam/idam-user-dashboard/preview.yaml
+++ b/apps/idam/idam-user-dashboard/preview.yaml
@@ -12,6 +12,6 @@ spec:
       ingressHost: idam-user-dashboard.preview.platform.hmcts.net
       environment:
         STRATEGIC_SERVICE_URL: 'http://idam-api'
-        STRATEGIC_PUBLIC_URL: 'https://idam-web-public.preview.platform.hmcts.net'
+        STRATEGIC_PUBLIC_URL: 'https://hmcts-access.preview.platform.hmcts.net'
         DASHBOARD_URL: 'https://idam-user-dashboard.preview.platform.hmcts.net'
         OAUTH_CLIENT_REDIRECT: 'https://idam-user-dashboard.preview.platform.hmcts.net/oauth2/callback'
