Add storage classs for LRS managed disks to use in preview

--- a/apps/admin/preview/base/kustomization.yaml
+++ b/apps/admin/preview/base/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
 - ../../../rbac/edit-clusterrole.yaml
 - ../../../rbac/reader-clusterrole.yaml
 - ../../delete-hung-pods
+- ../../storageclass/storageclass-lrs.yaml
 patches:
 - path: ../../traefik2/preview/secret-provider.yaml
 - path: ../../traefik2/preview/tlsstore-patch.yaml
