add perftest override for dashboard

--- a/apps/idam/perftest/base/kustomization.yaml
+++ b/apps/idam/perftest/base/kustomization.yaml
@@ -13,5 +13,6 @@ patches:
   - path: ../../idam-testing-support-api/perftest.yaml
   - path: ../../idam-user-profile-bridge/perftest.yaml
   - path: ../../idam-hmcts-access/perftest.yaml
+  - path: ../../idam-user-dashboard/perftest.yaml
   - path: ../../identity/perftest.yaml
   - path: ../../serviceaccount/perftest.yaml
