--- a/apps/aac/perftest/base/kustomization.yaml
+++ b/apps/aac/perftest/base/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 resources:
   - ../../base
   - ../../../rbac/nonprod-role.yaml
+  - ../../../base/docker-registry/perftest
 namespace: aac
 patches:
   - path: ../../manage-case-assignment/perftest.yaml
