add remaining environments

--- a/apps/aac/aat/base/kustomization.yaml
+++ b/apps/aac/aat/base/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 resources:
   - ../../base
   - ../../../rbac/nonprod-role.yaml
+  - ../../../base/docker-registry/aat
 patches:
   - path: ../../manage-case-assignment/aat.yaml
   - path: ../../serviceaccount/aat.yaml
