--- a/apps/aac/demo/base/kustomization.yaml
+++ b/apps/aac/demo/base/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
   - ../../base
   - ../../../rbac/nonprod-role.yaml
   - ../../aac-ac-int-manage-case-assignment/aac-ac-int-manage-case-assignment.yaml
+  - ../../../base/docker-registry/demo
 namespace: aac
 patches:
   - path: ../../manage-case-assignment/demo.yaml
