--- a/apps/aac/prod/base/kustomization.yaml
+++ b/apps/aac/prod/base/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base
+  - ../../../base/docker-registry/prod
 namespace: aac
 patches:
   - path: ../../manage-case-assignment/prod.yaml
