--- a/apps/sscs/sscs-tribunals-api/aat.yaml
+++ b/apps/sscs/sscs-tribunals-api/aat.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   values:
     java:
-      image: hmctspublic.azurecr.io/sscs/tribunals-api:prod-d6b0e4d-20250807111549 #{"$imagepolicy": "flux-system:sscs-tribunals-api"}
+      image: hmctspublic.azurecr.io/sscs/tribunals-api:pr-4843-c24d523-20250808115506 #{"$imagepolicy": "flux-system:aat-sscs-tribunals-api"}
       aadIdentityName: sscs
       environment:
         CREATE_CCD_ENDPOINT: true
@@ -18,7 +18,7 @@ spec:
         SECURE_DOC_STORE_FEATURE: true
         POSTPONEMENTS_FEATURE: true
         SSCS2_FEATURE: true
-        DUMMY_PROPERTY: true
+        DUMMY_PROPERTY: false
         POST_HEARINGS_FEATURE: true
         POST_HEARINGS_B_FEATURE: true
         WORK_ALLOCATION_FEATURE: false
