DTSPB-4893 Initial commit set up data extracts cron job

--- a/apps/probate/aat/base/kustomization.yaml
+++ b/apps/probate/aat/base/kustomization.yaml
@@ -10,6 +10,7 @@ resources:
   - ../../probate-cron-draft-cases-with-payment/probate-cron-draft-cases-with-payment.yaml
   - ../../probate-cron-automated-notification/probate-cron-automated-notification.yaml
   - ../../probate-cron-caveat-expiry/probate-cron-caveat-expiry.yaml
+  - ../../probate-cron-data-extracts/probate-cron-data-extracts.yaml
   - ../../../rbac/nonprod-role.yaml
   - ../../../base/slack-provider/aat
   - ../../../base/docker-registry/aat
@@ -27,5 +28,6 @@ patches:
   - path: ../../probate-cron-draft-cases-with-payment/aat/aat.yaml
   - path: ../../probate-cron-automated-notification/aat/aat.yaml
   - path: ../../probate-cron-caveat-expiry/aat/aat.yaml
+  - path: ../../probate-cron-data-extracts/aat/aat.yaml
   - path: ../../identity/aat.yaml
   - path: ../../serviceaccount/aat.yaml
