--- a/apps/probate/perftest/base/kustomization.yaml
+++ b/apps/probate/perftest/base/kustomization.yaml
@@ -11,6 +11,7 @@ resources:
   - ../../probate-cron-draft-cases-with-payment/probate-cron-draft-cases-with-payment.yaml
   - ../../probate-cron-automated-notification/probate-cron-automated-notification.yaml
   - ../../probate-cron-caveat-expiry/probate-cron-caveat-expiry.yaml
+  - ../../probate-cron-data-extracts/probate-cron-data-extracts.yaml
   - ../../../rbac/nonprod-role.yaml
   - ../../../base/slack-provider/perftest
   - ../../../base/docker-registry/perftest
@@ -31,5 +32,6 @@ patches:
   - path: ../../probate-cron-draft-cases-with-payment/perftest/perftest.yaml
   - path: ../../probate-cron-automated-notification/perftest/perftest.yaml
   - path: ../../probate-cron-caveat-expiry/perftest/perftest.yaml
+  - path: ../../probate-cron-data-extracts/perftest/perftest.yaml
   - path: ../../identity/perftest.yaml
   - path: ../../serviceaccount/perftest.yaml
