--- a/apps/probate/prod/base/kustomization.yaml
+++ b/apps/probate/prod/base/kustomization.yaml
@@ -13,6 +13,7 @@ resources:
   - ../../probate-cron-draft-cases-with-payment/probate-cron-draft-cases-with-payment.yaml
   - ../../probate-cron-automated-notification/probate-cron-automated-notification.yaml
   - ../../probate-cron-caveat-expiry/probate-cron-caveat-expiry.yaml
+  - ../../probate-cron-data-extracts/probate-cron-data-extracts.yaml
   - ../../../base/slack-provider/prod
   - ../../../base/docker-registry/prod
 namespace: probate
@@ -35,4 +36,5 @@ patches:
   - path: ../../probate-cron-draft-cases-with-payment/prod/prod.yaml
   - path: ../../probate-cron-automated-notification/prod/prod.yaml
   - path: ../../probate-cron-caveat-expiry/prod/prod.yaml
+  - path: ../../probate-cron-data-extracts/prod/prod.yaml
   - path: ../../serviceaccount/prod.yaml
