--- a/apps/probate/demo/base/kustomization.yaml
+++ b/apps/probate/demo/base/kustomization.yaml
@@ -13,6 +13,7 @@ resources:
   - ../../probate-cron-draft-cases-with-payment/probate-cron-draft-cases-with-payment.yaml
   - ../../probate-cron-automated-notification/probate-cron-automated-notification.yaml
   - ../../probate-cron-caveat-expiry/probate-cron-caveat-expiry.yaml
+  - ../../probate-cron-data-extracts/probate-cron-data-extracts.yaml
   - ../../../rbac/nonprod-role.yaml
   - ../../../base/slack-provider/demo
   - ../../../base/docker-registry/demo
@@ -35,5 +36,6 @@ patches:
   - path: ../../probate-cron-draft-cases-with-payment/demo/demo.yaml
   - path: ../../probate-cron-automated-notification/demo/demo.yaml
   - path: ../../probate-cron-caveat-expiry/demo/demo.yaml
+  - path: ../../probate-cron-data-extracts/demo/demo.yaml
   - path: ../../identity/demo.yaml
   - path: ../../serviceaccount/demo.yaml
