--- a/apps/probate/probate-cron-data-extracts/demo/demo.yaml
+++ b/apps/probate/probate-cron-data-extracts/demo/demo.yaml
@@ -9,7 +9,7 @@ spec:
       image: hmctspublic.azurecr.io/probate/back-office:pr-3260-4c01e12-20250804153442 #{"$imagepolicy": "flux-system:demo-probate-back-office"}
       schedule: "0 10 31 2 *"
       environment:
-        TASK_NAME: SendNotificationsTask
+        TASK_NAME: DataExtractsTask
         MANAGE_CASE_URL: https://manage-case.demo.platform.hmcts.net
         FRONTEND_URL: https://probate.demo.platform.hmcts.net
     global:
