--- a/apps/private-law/prl-dgs/demo.yaml
+++ b/apps/private-law/prl-dgs/demo.yaml
@@ -36,7 +36,7 @@ spec:
       readinessTimeout: 10
       readinessPeriod: 15
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/prl/dgs:pr-402-8561294-20250722154042 #{"$imagepolicy": "flux-system:demo-prl-dgs"}
+      image: hmctspublic.azurecr.io/prl/dgs:pr-402-8561294-20250722154042 #{"$imagepolicy": "flux-system:prl-dgs"}
       environment:
         FEATURE_EXAMPLE: true
         DOCMOSIS_SERVICE_DEV_MODE_FLAG: false
