--- a/apps/idam/idam-user-dashboard/ithc.yaml
+++ b/apps/idam/idam-user-dashboard/ithc.yaml
@@ -8,4 +8,4 @@ spec:
   values:
     nodejs:
       environment:
-        STRATEGIC_PUBLIC_URL: https://hmcts-access.demo.platform.hmcts.net
+        STRATEGIC_PUBLIC_URL: https://hmcts-access.ithc.platform.hmcts.net
