--- a/apps/sscs/sscs-ccd-case-migration/prod.yaml
+++ b/apps/sscs/sscs-ccd-case-migration/prod.yaml
@@ -53,6 +53,8 @@ spec:
               alias: ADJOURNMENT_FLAG_MIGRATION_ENCODED_STRING
             - name: encoded-string-clear-pcm-migration
               alias: PANEL_MEMBER_COMPOSITION_MIGRATION_ENCODED_STRING
+            - name: encoded-string-default-panel-composition-exclude
+              alias: DEFAULT_PANEL_COMPOSITION_EXCLUDE_ENCODED_STRING
       environment:
         CCD_DATA_STORE_API_BASE_URL: http://ccd-data-store-api-prod.service.core-compute-prod.internal
         IDAM_S2S_URL: http://rpe-service-auth-provider-prod.service.core-compute-prod.internal
