add secret and vars

--- a/apps/sscs/sscs-ccd-case-migration/prod.yaml
+++ b/apps/sscs/sscs-ccd-case-migration/prod.yaml
@@ -55,6 +55,8 @@ spec:
               alias: PANEL_MEMBER_COMPOSITION_MIGRATION_ENCODED_STRING
             - name: encoded-string-default-panel-composition-exclude
               alias: DEFAULT_PANEL_COMPOSITION_EXCLUDE_ENCODED_STRING
+            - name: encoded-string-default-panel-composition
+              alias: DEFAULT_PANEL_COMPOSITION_ENCODED_STRING
       environment:
         CCD_DATA_STORE_API_BASE_URL: http://ccd-data-store-api-prod.service.core-compute-prod.internal
         IDAM_S2S_URL: http://rpe-service-auth-provider-prod.service.core-compute-prod.internal
@@ -63,9 +65,11 @@ spec:
         JUDICIAL_REF_API_URL: http://rd-judicial-api-prod.service.core-compute-prod.internal
         ARCHIVE_OLD_DRAFTS_ENABLED: true
         VENUE_MIGRATION_ENABLED: false
+        DEFAULT_PANEL_COMPOSITION_ENABLED: true
+        ULR_USE_PRE_FETCHED_CASE_LIST: true
         CASE_MIGRATION_MAX_RETRIES: 5
         MIGRATION_QUERY_SIZE: 10000
-        MIGRATION_CASE_LIMIT: 1000
+        MIGRATION_CASE_LIMIT: 100
         JAVA_OPTS: -Xmx4G
     global:
       environment: prod
