--- a/apps/hmc/hmc-cft-hearing-service/demo.yaml
+++ b/apps/hmc/hmc-cft-hearing-service/demo.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   values:
     java:
-      image: hmctspublic.azurecr.io/hmc/cft-hearing-service:prod-de0d0d4-20250716101341
+      image: hmctspublic.azurecr.io/hmc/cft-hearing-service:prod-23a2489-20250806081311 #{"$imagepolicy": "flux-system:demo-hmc-cft-hearing-service"}
       environment:
         LOGGING.LEVEL.UK.GOV.HMCTS.REFORM.HMC.CONFIG: DEBUG
         LOGGING.LEVEL.UK.GOV.HMCTS.REFORM.HMC.SERVICE: DEBUG
