--- a/apps/private-law/prl-cos/demo.yaml
+++ b/apps/private-law/prl-cos/demo.yaml
@@ -65,7 +65,7 @@ spec:
       readinessTimeout: 300
       readinessPeriod: 10
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/prl/cos:prod-bd57935-20250806130311 #{"$imagepolicy": "flux-system:prl-cos"}
+      image: hmctspublic.azurecr.io/prl/cos:prod-bd57935-20250806130311 #{"$imagepolicy": "flux-system:demo-prl-cos"}
       environment:
         FEATURE_EXAMPLE: false
         DUMMY_ENV: false
