--- a/apps/fees-pay/ccpay-bubble-frontend/demo.yaml
+++ b/apps/fees-pay/ccpay-bubble-frontend/demo.yaml
@@ -9,5 +9,5 @@ spec:
       image: hmctspublic.azurecr.io/ccpay/bubble-frontend:prod-d987e61-20250805163729 #{"$imagepolicy": "flux-system:demo-ccpay-bubble-frontend"}
       environment:
         PCIPAL_ANTENNA_URL: https://paybubble.demo.platform.hmcts.net/ccd-search
-        DUMMY_RESTART_VAR: falsess
+        DUMMY_RESTART_VAR: true
         CCPAY_REFUNDS_API_URL: http://ccpay-refunds-api-demo.service.core-compute-demo.internal
