--- a/apps/ia/ia-aip-frontend/prod.yaml
+++ b/apps/ia/ia-aip-frontend/prod.yaml
@@ -14,6 +14,6 @@ spec:
         DOCMOSIS_RENDER_URL: "https://docmosis.platform.hmcts.net/rs/render"
         TRACKING_SCRIPTS: true
         RESTART_ME: "2"
-        BANNER_ENABLED: true
+        BANNER_ENABLED: false
         BANNER_TITLE_TEXT: 'Scheduled Maintenance'
         BANNER_MESSAGE_HTML: 'Please note, the service will be unavailable on Tuesday 12th August 2025 between 8:30pm to 11:00pm'
