ILA Migration: update time and search var (#39938)
* update time and search var

* update time

--- a/apps/sscs/sscs-ccd-case-migration/prod.yaml
+++ b/apps/sscs/sscs-ccd-case-migration/prod.yaml
@@ -14,7 +14,7 @@ spec:
       memoryRequests: "1024Mi"
       memoryLimits: "4096Mi"
       restartPolicy: Never
-      schedule: "15 20 * * *"
+      schedule: "45 20 * * *"
       keyVaults:
         sscs:
           resourceGroup: sscs
@@ -66,7 +66,7 @@ spec:
         ARCHIVE_OLD_DRAFTS_ENABLED: true
         VENUE_MIGRATION_ENABLED: false
         DEFAULT_PANEL_COMPOSITION_ENABLED: true
-        ULR_USE_PRE_FETCHED_CASE_LIST: true
+        ULR_USE_PRE_FETCHED_CASE_LIST: false
         CASE_MIGRATION_MAX_RETRIES: 5
         MIGRATION_QUERY_SIZE: 10000
         MIGRATION_CASE_LIMIT: 100
