--- a/apps/ia/ia-hearings-api/demo-image-policy.yaml
+++ b/apps/ia/ia-hearings-api/demo-image-policy.yaml
@@ -2,6 +2,13 @@ apiVersion: image.toolkit.fluxcd.io/v1beta2
 kind: ImagePolicy
 metadata:
   name: demo-ia-hearings-api
+  annotations:
+    hmcts.github.com/prod-automated: disabled
 spec:
-  imageRepositoryRef:
+  filterTags:
+    pattern: '^pr-498-[a-f0-9]+-(?P<ts>[0-9]+)'
+    extract: '$ts'
+  policy:
+    alphabetical:
+      order: asc
     name: ia-hearings-api
