Test autoscaling config in perftest

--- a/apps/financial-remedy/finrem-cos/perftest.yaml
+++ b/apps/financial-remedy/finrem-cos/perftest.yaml
@@ -6,11 +6,10 @@ metadata:
 spec:
   values:
     java:
-      replicas: 3
+      memoryRequests: "1280Mi"
       autoscaling:
-        enabled: true
-        maxReplicas: 4
-        targetCPUUtilizationPercentage: 80 # Default is 80% target CPU utilization
+        cpu:
+          enabled: false
       environment:
         FEATURE_PBA_CASE_TYPE: false
         VAR_FLUX_V2: trigger3
