Upgrade Traefik to version 37.0.0 and add CRDs for Sandbox

--- a/apps/admin/sbox/base/kustomization.yaml
+++ b/apps/admin/sbox/base/kustomization.yaml
@@ -12,3 +12,4 @@ patches:
 - path: ../../traefik2/sbox/secret-provider.yaml
 - path: ../../aad-pod-id/mi/sbox/azure-identity-patch.yaml
 - path: ../../env-injector/sbox.yaml
+- path: ../../traefik-crds-upgrade-v37/kustomize.yaml
