--- a/apps/financial-remedy/finrem-cos/ithc.yaml
+++ b/apps/financial-remedy/finrem-cos/ithc.yaml
@@ -6,6 +6,9 @@ metadata:
 spec:
   values:
     java:
+      replicas: 1
+      autoscaling:
+        maxReplicas: 2
       environment:
         SECURE_DOC_ENABLED: false
         FEATURE_PBA_CASE_TYPE: true
