Update hpa config in ithc

--- a/apps/financial-remedy/finrem-cos/ithc.yaml
+++ b/apps/financial-remedy/finrem-cos/ithc.yaml
@@ -7,6 +7,7 @@ spec:
   values:
     java:
       replicas: 1
+      memoryRequests: "1280Mi"
       autoscaling:
         maxReplicas: 2
       environment:
