Update hpa config in ithc

--- a/apps/financial-remedy/finrem-cos/ithc.yaml
+++ b/apps/financial-remedy/finrem-cos/ithc.yaml
@@ -8,7 +8,9 @@ spec:
     java:
       replicas: 1
       memoryRequests: "1280Mi"
+      startupDelay: 30
       autoscaling:
+        minReplicas: 1
         maxReplicas: 2
       environment:
         SECURE_DOC_ENABLED: false
