LAU-1214 configurecnp-flux-config for lau-eud-backend

--- a/apps/lau/automation/kustomization.yaml
+++ b/apps/lau/automation/kustomization.yaml
@@ -13,3 +13,7 @@ resources:
   - ../lau-idam-backend/demo-image-policy.yaml
   - ../lau-idam-backend/demo-int-image-policy.yaml
   - ../lau-idam-backend/image-policy.yaml
+  - ../lau-eud-backend/image-repo.yaml
+  - ../lau-eud-backend/demo-image-policy.yaml
+  - ../lau-eud-backend/demo-int-image-policy.yaml
+  - ../lau-eud-backend/image-policy.yaml
