--- a/apps/lau/demo/base/kustomization.yaml
+++ b/apps/lau/demo/base/kustomization.yaml
@@ -13,6 +13,8 @@ patches:
   - path: ../../lau-idam-backend/demo.yaml
   - path: ../../lau-case-backend/demo.yaml
   - path: ../../lau-case-backend-int/demo.yaml
+  - path: ../../lau-eud-backend/demo.yaml
+  - path: ../../lau-eud-backend-int/demo.yaml
   - path: ../../lau-frontend-int/demo.yaml
   - path: ../../lau-idam-backend-int/demo.yaml
   - path: ../../lau-frontend/demo.yaml
