--- a/apps/lau/ithc/base/kustomization.yaml
+++ b/apps/lau/ithc/base/kustomization.yaml
@@ -9,4 +9,5 @@ namespace: lau
 patches:
   - path: ../../lau-idam-backend/ithc.yaml
   - path: ../../lau-case-backend/ithc.yaml
+  - path: ../../lau-eud-backend/ithc.yaml
   - path: ../../serviceaccount/ithc.yaml
