--- a/apps/lau/prod/base/kustomization.yaml
+++ b/apps/lau/prod/base/kustomization.yaml
@@ -8,5 +8,6 @@ namespace: lau
 patches:
   - path: ../../lau-idam-backend/prod.yaml
   - path: ../../lau-case-backend/prod.yaml
+  - path: ../../lau-eud-backend/prod.yaml
   - path: ../../lau-frontend/prod.yaml
   - path: ../../serviceaccount/prod.yaml
