--- a/apps/lau/aat/base/kustomization.yaml
+++ b/apps/lau/aat/base/kustomization.yaml
@@ -9,5 +9,6 @@ namespace: lau
 patches:
   - path: ../../lau-idam-backend/aat.yaml
   - path: ../../lau-case-backend/aat.yaml
+  - path: ../../lau-eud-backend/aat.yaml
   - path: ../../lau-frontend/aat.yaml
   - path: ../../serviceaccount/aat.yaml
