--- a/apps/lau/perftest/base/kustomization.yaml
+++ b/apps/lau/perftest/base/kustomization.yaml
@@ -9,5 +9,6 @@ namespace: lau
 patches:
   - path: ../../lau-idam-backend/perftest.yaml
   - path: ../../lau-case-backend/perftest.yaml
+  - path: ../../lau-eud-backend/perftest.yaml
   - path: ../../serviceaccount/perftest.yaml
   - path: ../../lau-frontend/perftest.yaml
