--- a/apps/lau/lau-eud-backend-int/lau-eud-backend-int.yaml
+++ b/apps/lau/lau-eud-backend-int/lau-eud-backend-int.yaml
@@ -8,7 +8,7 @@ spec:
     java:
       replicas: 2
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/lau/eud-backend:latest #{"$imagepolicy": "flux-system:lau-case-backend"}
+      image: hmctspublic.azurecr.io/lau/eud-backend:latest #{"$imagepolicy": "flux-system:lau-eud-backend"}
       ingressHost: lau-eud-backend-int-demo.service.core-compute-demo.internal
   chart:
     spec:
