--- a/apps/lau/lau-eud-backend/lau-eud-backend.yaml
+++ b/apps/lau/lau-eud-backend/lau-eud-backend.yaml
@@ -21,7 +21,7 @@ spec:
           enabled: true
           averageUtilization: 80
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/lau/eud-backend:latest #{"$imagepolicy": "flux-system:lau-case-backend"}
+      image: hmctspublic.azurecr.io/lau/eud-backend:latest #{"$imagepolicy": "flux-system:lau-eud-backend"}
   chart:
     spec:
       chart: ./stable/lau-eud-backend
