--- a/apps/lau/demo/base/kustomization.yaml
+++ b/apps/lau/demo/base/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   - ../../lau-case-backend-int/lau-case-backend-int.yaml
   - ../../lau-frontend-int/lau-frontend-int.yaml
   - ../../lau-idam-backend-int/lau-idam-backend-int.yaml
+  - ../../lau-eud-backend-int/lau-eud-backend-int.yaml
   - ../../../base/slack-provider/demo
   - ../../../base/docker-registry/demo
 namespace: lau
