Add resources only on lower environment

--- a/apps/lau/aat/base/kustomization.yaml
+++ b/apps/lau/aat/base/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - ../../../rbac/nonprod-role.yaml
   - ../../../base/slack-provider/aat
   - ../../../base/docker-registry/aat
+  - ../../lau-eud-backend/lau-eud-backend.yaml
 namespace: lau
 patches:
   - path: ../../lau-idam-backend/aat.yaml
