--- a/apps/lau/perftest/base/kustomization.yaml
+++ b/apps/lau/perftest/base/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - ../../../rbac/nonprod-role.yaml
   - ../../../base/slack-provider/perftest
   - ../../../base/docker-registry/perftest
+  - ../../lau-eud-backend/lau-eud-backend.yaml
 namespace: lau
 patches:
   - path: ../../lau-idam-backend/perftest.yaml
