--- a/apps/lau/preview/base/kustomization.yaml
+++ b/apps/lau/preview/base/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
   - ../../../base
   - ../../../base/workload-identity
   - ../../../base/docker-registry/dev
+  - ../../lau-eud-backend/lau-eud-backend.yaml
 namespace: lau
 patches:
   - path: ../../serviceaccount/aat.yaml
