--- a/apps/lau/ithc/base/kustomization.yaml
+++ b/apps/lau/ithc/base/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - ../../../rbac/nonprod-role.yaml
   - ../../../base/slack-provider/ithc
   - ../../../base/docker-registry/ithc
+  - ../../lau-eud-backend/lau-eud-backend.yaml
 namespace: lau
 patches:
   - path: ../../lau-idam-backend/ithc.yaml
