--- a/apps/xui/xui-webapp/demo.yaml
+++ b/apps/xui/xui-webapp/demo.yaml
@@ -51,4 +51,6 @@ spec:
         SERVICES_REFUNDS_API_URL: http://ccpay-refunds-api-demo.service.core-compute-demo.internal
         SERVICES_NOTIFICATIONS_API_URL: http://ccpay-notifications-service-demo.service.core-compute-demo.internal
         SERVICES_PAYMENTS_URL: http://payment-api-demo.service.core-compute-demo.internal
+        SERVICES_IDAM_SERVICE_OVERRIDE: true
+        SERVICES_IDAM_ISS_URL: https://idam-web-public.demo.platform.hmcts.net/o
       image: hmctspublic.azurecr.io/xui/webapp:prod-2555ac8-20250812202552 #{"$imagepolicy": "flux-system:demo-xui-webapp"}
