--- a/apps/xui/xui-webapp/demo.yaml
+++ b/apps/xui/xui-webapp/demo.yaml
@@ -17,7 +17,7 @@ spec:
         STAFF_SUPPORTED_JURISDICTIONS: ST_CIC,CIVIL,EMPLOYMENT,PRIVATELAW,PUBLICLAW,IA,SSCS,FR,DIVORCE,PROBATE
         HEARINGS_JURISDICTIONS: SSCS,PRIVATELAW,CIVIL,IA,EMPLOYMENT,ST_CIC
         FEATURE_OIDC_ENABLED: true
-        SERVICES_IDAM_ISS_URL: https://idam-web-public.demo.platform.hmcts.net/o
+        SERVICES_IDAM_ISS_URL: https://idam-web-public.demo.platform.hmcts.net
         DEBUG: xuiNode:*
         SERVICES_IDAM_OAUTH_CALLBACK_URL: oauth2/callback
         STUB: false
