--- a/apps/xui/xui-webapp/ithc.yaml
+++ b/apps/xui/xui-webapp/ithc.yaml
@@ -42,4 +42,4 @@ spec:
         SERVICES_JUDICIAL_BOOKING_API_PATH: http://am-judicial-booking-service-ithc.service.core-compute-ithc.internal
         FEATURE_ACCESS_MANAGEMENT_ENABLED: true
         FEATURE_LAU_SPECIFIC_CHALLENGED_ENABLED: true
-      image: hmctspublic.azurecr.io/xui/webapp:prod-2555ac8-20250812202552 #{"$imagepolicy": "flux-system:ithc-xui-webapp"}
+      image: hmctspublic.azurecr.io/xui/webapp:prod-f5a92c9-20250808122831
