Revert "Update demo.yaml" (#39964)
* Revert "Update demo.yaml (#39958)"

This reverts commit 617f1f3c9cc81845ecba7304c766bc68ff1e57e2.

* Update demo.yaml

--- a/apps/xui/xui-webapp/demo.yaml
+++ b/apps/xui/xui-webapp/demo.yaml
@@ -17,7 +17,7 @@ spec:
         STAFF_SUPPORTED_JURISDICTIONS: ST_CIC,CIVIL,EMPLOYMENT,PRIVATELAW,PUBLICLAW,IA,SSCS,FR,DIVORCE,PROBATE
         HEARINGS_JURISDICTIONS: SSCS,PRIVATELAW,CIVIL,IA,EMPLOYMENT,ST_CIC
         FEATURE_OIDC_ENABLED: true
-        SERVICES_IDAM_ISS_URL: https://idam-web-public.demo.platform.hmcts.net/o
+        SERVICES_IDAM_ISS_URL: https://forgerock-am.service.core-compute-idam-demo.internal:8443/openam/oauth2/realms/root/realms/hmcts
         DEBUG: xuiNode:*
         SERVICES_IDAM_OAUTH_CALLBACK_URL: oauth2/callback
         STUB: false
@@ -51,5 +51,4 @@ spec:
         SERVICES_REFUNDS_API_URL: http://ccpay-refunds-api-demo.service.core-compute-demo.internal
         SERVICES_NOTIFICATIONS_API_URL: http://ccpay-notifications-service-demo.service.core-compute-demo.internal
         SERVICES_PAYMENTS_URL: http://payment-api-demo.service.core-compute-demo.internal
-        SERVICES_IDAM_SERVICE_OVERRIDE: true
-      image: hmctspublic.azurecr.io/xui/webapp:prod-2555ac8-20250812202552 #{"$imagepolicy": "flux-system:demo-xui-webapp"}
+      image: hmctspublic.azurecr.io/xui/webapp:prod-f5a92c9-20250808122831
