--- a/apps/idam/idam-web-public/idam-web-public.yaml
+++ b/apps/idam/idam-web-public/idam-web-public.yaml
@@ -28,6 +28,7 @@ spec:
         FEDERATED_SSO: true
         spring.security.oauth2.client.provider.moj.issuer-uri: https://sts.windows.net/c6874728-71e6-41fe-a9e1-2e8c36776ad8/
         trigger_deploy: 20241125
+        DUMMY_VAR: 1
   chart:
     spec:
       chart: ./stable/idam-web-public
