--- a/apps/idam/idam-api/idam-api.yaml
+++ b/apps/idam/idam-api/idam-api.yaml
@@ -74,7 +74,7 @@ spec:
         SPRING_JMS_SERVICEBUS_NAMESPACE: idam-servicebus-prod
         SPRING_CLOUD_AZURE_SERVICEBUS_NAMESPACE: idam-servicebus-prod
         SPRING_REDIS_TIMEOUT: 300
-        TRIGGER_RESTART: INC5672371
+        TRIGGER_RESTART: SIDM9440
   chart:
     spec:
       chart: ./stable/idam-api
