set clientid and resource id

--- a/apps/reform-scan/identity/ithc.yaml
+++ b/apps/reform-scan/identity/ithc.yaml
@@ -4,5 +4,5 @@ metadata:
   name: reform-scan
   namespace: reform-scan
 spec:
-  resourceID: "/subscriptions/not-set-yet/resourcegroups/managed-identities-ithc-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/reform-scan-ithc-mi"
-  clientID: "not-set-yet"
+  resourceID: "/subscriptions/7a4e3bd5-ae3a-4d0c-b441-2188fee3ff1c/resourcegroups/managed-identities-ithc-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/reform-scan-ithc-mi"
+  clientID: "0597b272-ecb9-4a92-a5b8-a9200b5712fa"
