--- a/apps/xui/xui-webapp/prod.yaml
+++ b/apps/xui/xui-webapp/prod.yaml
@@ -27,3 +27,5 @@ spec:
         DUMMY_VAR_TO_RESTART: 1
         SERVICES_HEARINGS_COMPONENT_API_SSCS: http://sscs-tribunals-api-prod.service.core-compute-prod.internal
         SERVICES_ICP_API: https://em-icp.platform.hmcts.net
+        SERVICES_IDAM_SERVICE_OVERRIDE: false
+        FEATURE_QUERY_IDAM_SERVICE_OVERRIDE: false
