--- a/clusters/ithc/base/kustomization.yaml
+++ b/clusters/ithc/base/kustomization.yaml
@@ -38,6 +38,7 @@ resources:
   - ../../../apps/pcq/base/kustomize.yaml
   - ../../../apps/private-law/base/kustomize.yaml
   - ../../../apps/rd/base/kustomize.yaml
+  - ../../../apps/reform-scan/base/kustomize.yaml
   - ../../../apps/rpe/base/kustomize.yaml
   - ../../../apps/bsp/base/kustomize.yaml
   - ../../../apps/sscs/base/kustomize.yaml
