--- a/apps/sscs/sscs-ccd-case-migration/demo-image-policy.yaml
+++ b/apps/sscs/sscs-ccd-case-migration/demo-image-policy.yaml
@@ -1,7 +1,16 @@
-apiVersion: image.toolkit.fluxcd.io/v1beta2
+apiVersion: image.toolkit.fluxcd.io/v1beta1
 kind: ImagePolicy
 metadata:
   name: demo-sscs-ccd-case-migration
+  annotations:
+    hmcts.github.com/prod-automated: disabled
 spec:
+  filterTags:
+    pattern: '^pr-106-[a-f0-9]+-(?P<ts>[0-9]+)'
+    extract: '$ts'
+  policy:
+    alphabetical:
+      order: asc
   imageRepositoryRef:
     name: sscs-ccd-case-migration
+
