--- a/apps/xui/xui-webapp/demo.yaml
+++ b/apps/xui/xui-webapp/demo.yaml
@@ -51,4 +51,4 @@ spec:
         SERVICES_REFUNDS_API_URL: http://ccpay-refunds-api-demo.service.core-compute-demo.internal
         SERVICES_NOTIFICATIONS_API_URL: http://ccpay-notifications-service-demo.service.core-compute-demo.internal
         SERVICES_PAYMENTS_URL: http://payment-api-demo.service.core-compute-demo.internal
-      image: hmctspublic.azurecr.io/xui/webapp:prod-f5a92c9-20250808122831
+      image: hmctspublic.azurecr.io/xui/webapp:prod-22fa85f-20250813104554 #{"$imagepolicy": "flux-system:demo-xui-webapp"}
