--- a/apps/xui/xui-ao-webapp/xui-ao-webapp.yaml
+++ b/apps/xui/xui-ao-webapp/xui-ao-webapp.yaml
@@ -8,7 +8,7 @@ spec:
     nodejs:
       replicas: 2
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/xui/ao-webapp:prod-f7cc4e3-20250808122907
+      image: hmctspublic.azurecr.io/xui/ao-webapp:prod-8338105-20250813104734 #{"$imagepolicy": "flux-system:xui-ao-webapp"}
   chart:
     spec:
       chart: ./stable/xui-ao-webapp
