--- a/apps/xui/xui-ao-webapp/ithc.yaml
+++ b/apps/xui/xui-ao-webapp/ithc.yaml
@@ -14,4 +14,4 @@ spec:
         DEBUG: xuiNode:*,-xuiNode:auth:s2s
         ISS_SERVICE: https://forgerock-am.service.core-compute-idam-ithc.internal:8443/openam/oauth2/realms/root/realms/hmcts
         FEATURE_SECURE_COOKIE_ENABLED: false
-      image: hmctspublic.azurecr.io/xui/ao-webapp:prod-f7cc4e3-20250808122907
+      image: hmctspublic.azurecr.io/xui/ao-webapp:prod-8338105-20250813104734 #{"$imagepolicy": "flux-system:ithc-xui-ao-webapp"}
