--- a/apps/xui/xui-ao-webapp/perftest.yaml
+++ b/apps/xui/xui-ao-webapp/perftest.yaml
@@ -16,4 +16,4 @@ spec:
         USER_TIMEOUT_IN_SECONDS: 1800
         DEBUG: xuiNode:*,-xuiNode:auth:s2s
         ISS_SERVICE: https://forgerock-am.service.core-compute-idam-perftest.internal:8443/openam/oauth2/realms/root/realms/hmcts
-      image: hmctspublic.azurecr.io/xui/ao-webapp:prod-f7cc4e3-20250808122907
+      image: hmctspublic.azurecr.io/xui/ao-webapp:prod-8338105-20250813104734 #{"$imagepolicy": "flux-system:xui-ao-webapp"}
