--- a/apps/xui/xui-mo-webapp/xui-mo-webapp.yaml
+++ b/apps/xui/xui-mo-webapp/xui-mo-webapp.yaml
@@ -8,7 +8,7 @@ spec:
     nodejs:
       replicas: 2
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/xui/mo-webapp:prod-cdc031f-20250808122921
+      image: hmctspublic.azurecr.io/xui/mo-webapp:prod-214ba35-20250813104816 #{"$imagepolicy": "flux-system:xui-mo-webapp"}
   chart:
     spec:
       chart: ./stable/xui-mo-webapp
