--- a/apps/xui/xui-mo-webapp/demo.yaml
+++ b/apps/xui/xui-mo-webapp/demo.yaml
@@ -21,4 +21,4 @@ spec:
         SERVICES_ROLE_ASSIGNMENT_API: http://am-role-assignment-service-demo.service.core-compute-demo.internal
         SERVICES_PRD_COMMONDATA_API: http://rd-commondata-api-demo.service.core-compute-demo.internal
         SERVICES_CCD_COMPONENT_API_PATH: https://gateway-ccd.demo.platform.hmcts.net
-      image: hmctspublic.azurecr.io/xui/mo-webapp:prod-cdc031f-20250808122921
+      image: hmctspublic.azurecr.io/xui/mo-webapp:prod-214ba35-20250813104816 #{"$imagepolicy": "flux-system:demo-xui-mo-webapp"}
