--- a/apps/xui/xui-mo-webapp/ithc.yaml
+++ b/apps/xui/xui-mo-webapp/ithc.yaml
@@ -18,4 +18,4 @@ spec:
         FEATURE_SECURE_COOKIE_ENABLED: false
         FEATURE_OIDC_ENABLED: true
         JURISDICTIONS: SSCS,AUTOTEST1,DIVORCE,PROBATE,PUBLICLAW,bulkscan,BULKSCAN,IA,EMPLOYMENT,CMC,CIVIL,PRIVATELAW
-      image: hmctspublic.azurecr.io/xui/mo-webapp:prod-cdc031f-20250808122921
+      image: hmctspublic.azurecr.io/xui/mo-webapp:prod-214ba35-20250813104816 #{"$imagepolicy": "flux-system:ithc-xui-mo-webapp"}
