--- a/apps/xui/xui-webapp/xui-webapp.yaml
+++ b/apps/xui/xui-webapp/xui-webapp.yaml
@@ -8,7 +8,7 @@ spec:
     nodejs:
       replicas: 2
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/xui/webapp:prod-f5a92c9-20250808122831
+      image: hmctspublic.azurecr.io/xui/webapp:prod-22fa85f-20250813104554 #{"$imagepolicy": "flux-system:xui-webapp"}
       environment:
         FEATURE_COMPRESSION_ENABLED: false
   chart:
