--- a/apps/money-claims/cmc-claim-store/prod.yaml
+++ b/apps/money-claims/cmc-claim-store/prod.yaml
@@ -30,6 +30,7 @@ spec:
         FEATURE_TOGGLES_CTSC_ENABLED: true
         FEATURE_TOGGLES_BULK_PRINT_TRANSFER_ENABLED: true
         FEATURE_TOGGLES_STAFF_EMAILS_ENABLED_FOR_LEGAL_REP: true
+        FEATURE_CREATE_CLAIM: false
         STAFF_NOTIFICATIONS_LEGAL_RECIPIENT: OnlineCivilMoneyClaims@justice.gov.uk
         RELOAD_AZURE_SECRETS_MANUAL_REFRESH_OF_PODS: true
         STAFF_NOTIFICATIONS_SENDER: noreply@mail.moneyclaims.service.gov.uk
