--- a/clusters/sbox/base/kustomization.yaml
+++ b/clusters/sbox/base/kustomization.yaml
@@ -22,3 +22,4 @@ patches:
     kind: Kustomization
 - path: ../../../apps/admin/sbox/base/kustomize.yaml
 - path: ../../../apps/admin/traefik-crds-upgrade-v37/kustomize.yaml
+- path: ../../../apps/monitoring/kube-prometheus-stack-crds-upgrade/kustomize.yaml
