--- a/apps/pcq/pcq-backend/aat.yaml
+++ b/apps/pcq/pcq-backend/aat.yaml
@@ -12,8 +12,8 @@ spec:
         PCQ_DISPOSER_ENABLED: false
         NUMBER_OF_DAYS_LIMIT: 90
     job:
-      schedule: "0 10 * * *"
+      schedule: "0 16 * * *"
       environment:
         PCQ_DISPOSER_ENABLED: true
-        PCQ_DISPOSER_DRY_RUN: true
+        PCQ_DISPOSER_DRY_RUN: false
         PCQ_DISPOSER_RATE_LIMIT: 1000
