schedule ILA migration (#39986)

--- a/apps/sscs/sscs-ccd-case-migration/prod.yaml
+++ b/apps/sscs/sscs-ccd-case-migration/prod.yaml
@@ -14,7 +14,7 @@ spec:
       memoryRequests: "1024Mi"
       memoryLimits: "4096Mi"
       restartPolicy: Never
-      schedule: "45 20 * * *"
+      schedule: "15 20-23,0-5 * * 1-4"
       keyVaults:
         sscs:
           resourceGroup: sscs
@@ -64,7 +64,6 @@ spec:
         RD_LOCATION_REF_API_URL: http://rd-location-ref-api-prod.service.core-compute-prod.internal
         JUDICIAL_REF_API_URL: http://rd-judicial-api-prod.service.core-compute-prod.internal
         ARCHIVE_OLD_DRAFTS_ENABLED: true
-        VENUE_MIGRATION_ENABLED: false
         DEFAULT_PANEL_COMPOSITION_ENABLED: true
         ULR_USE_PRE_FETCHED_CASE_LIST: false
         CASE_MIGRATION_MAX_RETRIES: 5
