Upgrade Traefik to version 37.0.0 for demo, ithc, pertest and ptl

--- a/clusters/ptl-intsvc/base/kustomization.yaml
+++ b/clusters/ptl-intsvc/base/kustomization.yaml
@@ -22,3 +22,4 @@ patches:
     kind: Kustomization
     annotationSelector: hmcts.github.com/kustomize-defaults != disabled
 - path: ../../../apps/admin/ptl-intsvc/base/kustomize.yaml
+- path: ../../../apps/admin/traefik-crds-upgrade-v37/kustomize.yaml
