--- a/clusters/ithc/base/kustomization.yaml
+++ b/clusters/ithc/base/kustomization.yaml
@@ -63,3 +63,4 @@ patches:
   - path: ../../../apps/tax-tribunals/ithc/base/kustomize.yaml
   - path: ../../../apps/neuvector/ithc/base/kustomize.yaml
   - path: ../../../apps/admin/ithc/base/kustomize.yaml
+  - path: ../../../apps/admin/traefik-crds-upgrade-v37/kustomize.yaml
