--- a/clusters/perftest/base/kustomization.yaml
+++ b/clusters/perftest/base/kustomization.yaml
@@ -58,3 +58,4 @@ patches:
       annotationSelector: hmcts.github.com/kustomize-defaults != disabled
   - path: ../../../apps/admin/perftest/base/kustomize.yaml
   - path: ../../../apps/dynatrace/dynatrace-crds-upgrade/kustomize.yaml
+  - path: ../../../apps/admin/traefik-crds-upgrade-v37/kustomize.yaml
