Point to kustomize also

--- a/clusters/sbox/base/kustomization.yaml
+++ b/clusters/sbox/base/kustomization.yaml
@@ -23,3 +23,4 @@ patches:
 - path: ../../../apps/admin/sbox/base/kustomize.yaml
 - path: ../../../apps/admin/traefik-crds-upgrade-v37/kustomize.yaml
 - path: ../../../apps/monitoring/kube-prometheus-stack-crds-upgrade/kustomization.yaml
+- path: ../../../apps/monitoring/kube-prometheus-stack-crds-upgrade/kustomize.yaml
