--- a/apps/monitoring/kube-prometheus-stack/aat/00.yaml
+++ b/apps/monitoring/kube-prometheus-stack/aat/00.yaml
@@ -54,3 +54,12 @@ spec:
           type: camptocamp-prometheus-alertmanager-datasource
           url: http://alertmanager-01.aat.platform.hmcts.net
           access: proxy
+  chart:
+    spec:
+      chart: kube-prometheus-stack
+      # Update kube-prometheus-stack-crds/kustomization.yaml when updating this
+      version: 76.3.0
+      sourceRef:
+        kind: HelmRepository
+        name: prometheus
+        namespace: monitoring
