--- a/apps/monitoring/kube-prometheus-stack/demo/01.yaml
+++ b/apps/monitoring/kube-prometheus-stack/demo/01.yaml
@@ -30,3 +30,12 @@ spec:
                 title: 'Demo-01 - {{ template "slack.default.title" . }}'
                 text: "{{ range .Alerts }}{{ .Annotations.message }}\n{{ end }}"
           - name: "null"
+  chart:
+    spec:
+      chart: kube-prometheus-stack
+      # Update kube-prometheus-stack-crds/kustomization.yaml when updating this
+      version: 76.3.0
+      sourceRef:
+        kind: HelmRepository
+        name: prometheus
+        namespace: monitoring
