--- a/apps/monitoring/kube-prometheus-stack/preview/01.yaml
+++ b/apps/monitoring/kube-prometheus-stack/preview/01.yaml
@@ -15,3 +15,12 @@ spec:
       ingress:
         hosts:
           - alertmanager-01.dev.platform.hmcts.net
+  chart:
+    spec:
+      chart: kube-prometheus-stack
+      # Update kube-prometheus-stack-crds/kustomization.yaml when updating this
+      version: 76.3.0
+      sourceRef:
+        kind: HelmRepository
+        name: prometheus
+        namespace: monitoring
