--- a/clusters/aat/base/kustomization.yaml
+++ b/clusters/aat/base/kustomization.yaml
@@ -65,3 +65,4 @@ patches:
   - path: ../../../apps/tax-tribunals/aat/base/kustomize.yaml
   - path: ../../../apps/admin/aat/base/kustomize.yaml
   - path: ../../../apps/dynatrace/dynatrace-crds-upgrade/kustomize.yaml
+  - path: ../../../apps/monitoring/kube-prometheus-stack-crds-upgrade/kustomize.yaml
