--- a/clusters/ithc/base/kustomization.yaml
+++ b/clusters/ithc/base/kustomization.yaml
@@ -63,3 +63,4 @@ patches:
   - path: ../../../apps/tax-tribunals/ithc/base/kustomize.yaml
   - path: ../../../apps/neuvector/ithc/base/kustomize.yaml
   - path: ../../../apps/admin/ithc/base/kustomize.yaml
+  - path: ../../../apps/monitoring/kube-prometheus-stack-crds-upgrade/kustomize.yaml
