DTSCCI-1530 Switch Off Claim Creation OCMC

--- a/apps/money-claims/cmc-claim-store/prod.yaml
+++ b/apps/money-claims/cmc-claim-store/prod.yaml
@@ -45,5 +45,7 @@ spec:
         FEATURE_TOGGLES_SECURE_DOC_STORE_ENABLED: true
         REFERENCE_DATABASE_MIGRATION: false
         TRIGGER_DEPLOY: trigger
+        feature_toggles:
+          create_claim_enabled = false
       spotInstances:
         enabled: false
