point to PR 1825 image to test draft appeal duplicates fix

--- a/apps/sscs/sscs-tribunals-frontend/aat.yaml
+++ b/apps/sscs/sscs-tribunals-frontend/aat.yaml
@@ -11,6 +11,7 @@ spec:
         enabled: true
         prefix: infected
         primaryIngressHost: blood-appeal.aat.platform.hmcts.net
+      image: hmctspublic.azurecr.io/sscs/tribunals-frontend:pr-1825-6f95907-20250813155104 #{"$imagepolicy": "flux-system:aat-sscs-tribunals-frontend"}
       environment:
         PCQ_URL: https://pcq.aat.platform.hmcts.net
         PCQ_ENABLED: "true"
