Upgrade Prometheus in PTL

--- a/apps/monitoring/kube-prometheus-stack/ptl-intsvc/00.yaml
+++ b/apps/monitoring/kube-prometheus-stack/ptl-intsvc/00.yaml
@@ -196,3 +196,12 @@ spec:
           type: loki
           url: http://loki-read:3100
           access: proxy
+  chart:
+    spec:
+      chart: kube-prometheus-stack
+      # Update kube-prometheus-stack-crds/kustomization.yaml when updating this
+      version: 76.3.0
+      sourceRef:
+        kind: HelmRepository
+        name: prometheus
+        namespace: monitoring
