--- a/apps/et/et-syr/demo.yaml
+++ b/apps/et/et-syr/demo.yaml
@@ -17,7 +17,7 @@ spec:
           secrets:
             - AppInsightsInstrumentationKey
             - idam-secret
-            - name: et-sya-redis-access-key
+            - name: redis-access-key
               alias: et-syr-redis-access-key
             - os-places-token
             - pcq-token-key
