Upgrade Traefik to version 37.0.0 for demo, ithc, pertest and ptl (#39988)
* Upgrade Traefik to version 37.0.0 for demo, ithc, pertest and ptl

* Upgrade Traefik to version 37.0.0 for aat, skip ptl until producton

--- a/clusters/ithc/base/kustomization.yaml
+++ b/clusters/ithc/base/kustomization.yaml
@@ -63,4 +63,5 @@ patches:
   - path: ../../../apps/tax-tribunals/ithc/base/kustomize.yaml
   - path: ../../../apps/neuvector/ithc/base/kustomize.yaml
   - path: ../../../apps/admin/ithc/base/kustomize.yaml
+  - path: ../../../apps/admin/traefik-crds-upgrade-v37/kustomize.yaml
   - path: ../../../apps/monitoring/kube-prometheus-stack-crds-upgrade/kustomize.yaml
