--- a/clusters/sbox-intsvc/base/kustomization.yaml
+++ b/clusters/sbox-intsvc/base/kustomization.yaml
@@ -20,4 +20,5 @@ patches:
       kind: Kustomization
       annotationSelector: hmcts.github.com/kustomize-defaults != disabled
   - path: ../../../apps/admin/sbox-intsvc/base/kustomize.yaml
+  - path: ../../../apps/admin/traefik-crds-upgrade-v37/kustomize.yaml
   - path: ../../../apps/monitoring/kube-prometheus-stack-crds-upgrade/kustomize.yaml
