--- a/clusters/demo/base/kustomization.yaml
+++ b/clusters/demo/base/kustomization.yaml
@@ -60,4 +60,5 @@ patches:
       annotationSelector: hmcts.github.com/kustomize-defaults != disabled
   - path: ../../../apps/tax-tribunals/demo/base/kustomize.yaml
   - path: ../../../apps/admin/demo/base/kustomize.yaml
+  - path: ../../../apps/admin/traefik-crds-upgrade-v37/kustomize.yaml
   - path: ../../../apps/monitoring/kube-prometheus-stack-crds-upgrade/kustomize.yaml
