--- a/clusters/ptl-intsvc/base/kustomization.yaml
+++ b/clusters/ptl-intsvc/base/kustomization.yaml
@@ -22,3 +22,5 @@ patches:
     kind: Kustomization
     annotationSelector: hmcts.github.com/kustomize-defaults != disabled
 - path: ../../../apps/admin/ptl-intsvc/base/kustomize.yaml
+# Will go together with the production environment
+# - path: ../../../apps/admin/traefik-crds-upgrade-v37/kustomize.yaml
