Point et-syr to shared redis

--- a/apps/et/et-syr/aat.yaml
+++ b/apps/et/et-syr/aat.yaml
@@ -8,3 +8,16 @@ spec:
   values:
     nodejs:
       ingressHost: et-syr.aat.platform.hmcts.net
+      environment:
+        REDIS_HOST: et-sya-session-storage-aat.redis.cache.windows.net
+      keyVaults:
+        et:
+          resourceGroup: et
+          secrets:
+            - AppInsightsInstrumentationKey
+            - idam-secret
+            - name: redis-access-key
+              alias: et-syr-redis-access-key
+            - os-places-token
+            - pcq-token-key
+            - launch-darkly-sdk-key
