CCD-6625 enable fpl logstash in all envs

--- a/apps/ccd/logstash/kustomization.yaml
+++ b/apps/ccd/logstash/kustomization.yaml
@@ -18,4 +18,5 @@ bases:
 - ../ccd-logstash-divorce
 - ../ccd-logstash-cmc
 - ../ccd-logstash-civil
+- ../ccd-logstash-fpl
 - ../ccd-logstash-probateman
