FACT-1731 poke processor

--- a/apps/bsp/bulk-scan-processor/ithc.yaml
+++ b/apps/bsp/bulk-scan-processor/ithc.yaml
@@ -28,3 +28,5 @@ spec:
         PAYMENTS_ENABLED_NFD: true
         PAYMENTS_ENABLED_SSCS: true
         PAYMENTS_ENABLED_PRIVATELAW: true
+        POKE: 1
+        
