Revert "enable PCM encoded-string migration (#40064)"
This reverts commit 2dca1e95044b2c804677dbc00e914c6cdae827c4.

--- a/apps/sscs/sscs-ccd-case-migration/prod.yaml
+++ b/apps/sscs/sscs-ccd-case-migration/prod.yaml
@@ -65,7 +65,7 @@ spec:
         JUDICIAL_REF_API_URL: http://rd-judicial-api-prod.service.core-compute-prod.internal
         ARCHIVE_OLD_DRAFTS_ENABLED: true
         DEFAULT_PANEL_COMPOSITION_ENABLED: true
-        ULR_USE_PRE_FETCHED_CASE_LIST: true
+        ULR_USE_PRE_FETCHED_CASE_LIST: false
         CASE_MIGRATION_MAX_RETRIES: 5
         MIGRATION_QUERY_SIZE: 300
         MIGRATION_CASE_LIMIT: 100
