added sscs payments enabled into ithc

--- a/apps/bsp/bulk-scan-processor/ithc.yaml
+++ b/apps/bsp/bulk-scan-processor/ithc.yaml
@@ -5,6 +5,7 @@ metadata:
 spec:
   values:
     java:
+      image: hmctspublic.azurecr.io/bulk-scan/processor:pr-3456-12d39e7-20250819165319
       environment:
         #60 days in seconds
         SAS_TOKEN_VALIDITY: "5184000"
