--- a/apps/et/et-cos/prod.yaml
+++ b/apps/et/et-cos/prod.yaml
@@ -57,7 +57,7 @@ spec:
         CASE_UNLINKED_LEGAL_REP_TEMPLATE_ID: 74fd5106-7e39-4032-adb7-fa7d45bd4ab3
         BUNDLES_SUBMITTED_NOTIFICATION_FOR_CLAIMANT_TEMPLATE_ID: 53c0c86a-971c-42e9-bc84-beabf74881f0
         BUNDLES_SUBMITTED_NOTIFICATION_FOR_TRIBUNAL_TEMPLATE_ID: 40f4b953-8343-421d-91fc-1f81cd9d961d
-        CRON_BFACTION_TASK: 0 0 * * * ?
+        CRON_BFACTION_TASK: 0 0 0 * * ?
         TSE_RESPONDENT_TO_RESPONDENT_NO_TEMPLATE_ID: e202d11d-a6db-4507-9a72-d63708044d7b
         TSE_RESPONDENT_TO_RESPONDENT_TYPE_A_TEMPLATE_ID: dbe945af-d7d0-4047-b235-ab51e4c8a2d1
         TSE_RESPONDENT_TO_RESPONDENT_TYPE_B_TEMPLATE_ID: d79ab19d-54d0-4daa-8939-0efa377158f8
