Test Virtual hearing migration in demo

--- a/apps/ia/ia-cron-ccd-migration-tool/demo-00.yaml
+++ b/apps/ia/ia-cron-ccd-migration-tool/demo-00.yaml
@@ -31,4 +31,4 @@ spec:
         MIGRATE_APPLICATION_STARTED_BY_LR_TTL_SET: "false"
         MIGRATION_PA_APPEALS_IN_PENDING_PAYMENT: "false"
         MIGRATION_VIRTUAL_REGION_LOCATION_IN_EXISTING_APPEALS: "true"
-        DUMMY_VARIABLE: "Y"
+        DUMMY_VARIABLE: "Yes"
