--- a/apps/disposer/disposer-idam-user/demo.yaml
+++ b/apps/disposer/disposer-idam-user/demo.yaml
@@ -7,7 +7,8 @@ spec:
     job:
       schedule: "0/15 * * * *"
       environment:
-        DISPOSER_IDAM_USER_ENABLED: false
+        DISPOSER_IDAM_USER_ENABLED: true
         DISPOSER_IDAM_USER_SIMULATION_MODE: true
         DISPOSER_IDAM_USER_BATCH_SIZE: 100
         DISPOSER_IDAM_USER_REQUESTS_LIMIT: 10000
+        ROLE_ASSIGNMENT_HOST: "http://am-role-assignment-service-pr-2432.service.core-compute-demo.internal"
