--- a/apps/disposer/disposer-idam-user/demo.yaml
+++ b/apps/disposer/disposer-idam-user/demo.yaml
@@ -11,4 +11,4 @@ spec:
         DISPOSER_IDAM_USER_SIMULATION_MODE: true
         DISPOSER_IDAM_USER_BATCH_SIZE: 100
         DISPOSER_IDAM_USER_REQUESTS_LIMIT: 10000
-        ROLE_ASSIGNMENT_HOST: "http://am-role-assignment-service-pr-2432.service.core-compute-demo.internal"
+        ROLE_ASSIGNMENT_HOST: "https://am-role-assignment-service-pr-2432.preview.platform.hmcts.net/"
